--- a/libltdl/Makefile.am
+++ b/libltdl/Makefile.am
@@ -7,10 +7,15 @@ AUTOMAKE_OPTIONS = no-dependencies foreign
 
 CFLAGS = -force-static
 
-EXTRA_DIST = acinclude.m4
-
 noinst_LTLIBRARIES = libltdl.la
 libltdl_la_SOURCES = ltdl.c
 libltdl_la_LDFLAGS = $(LIBADD_DL) 
 
 noinst_HEADERS = ltdl.h
+
+# rebuild the libtool script if needed
+ltdl.lo: libtool
+libtool: $(srcdir)/../ltconfig $(srcdir)/../ltmain.sh
+	rm -f libtool
+	cd .. && $(MAKE) libtool
+	$(MAKE) -f ../Makefile srcdir=$(srcdir)/.. LIBTOOL_DEPS= libtool
