--- a/configure.in
+++ b/configure.in
@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to create configure.
 AC_INIT(ltmain.in)
 
-AM_INIT_AUTOMAKE(libtool,1.2c)
+AM_INIT_AUTOMAKE(libtool,1.2d)
 
 pkgdatadir='${datadir}/libtool'
 AC_SUBST(pkgdatadir)
