--- a/ltmain.in
+++ b/ltmain.in
@@ -1853,28 +1853,23 @@ dld_preloaded_symbols[] =
 "
 
             if test -n "$export_symbols"; then
-              echo >> "$objdir/$dlsyms" "\
+              echo >> "$output_objdir/$dlsyms" "\
   {\"${output}\", (__ptr_t) 0},"
-	      sed 's/^\(.*\)/  {"\1", (__ptr_t) \&\1},/' < "$export_symbols" >> "$objdir/$dlsyms"
+	      sed 's/^\(.*\)/  {"\1", (__ptr_t) \&\1},/' < "$export_symbols" >> "$output_objdir/$dlsyms"
             fi
 
             for arg in $dlprefiles; do
 	      name=`echo "$arg" | sed -e 's%^.*/%%'`
-              echo >> "$objdir/$dlsyms" "\
+              echo >> "$output_objdir/$dlsyms" "\
   {\"$name\", (__ptr_t) 0},"
 	      eval "$NM $arg | $global_symbol_pipe > '$nlist'"
 
 	      if test -f "$nlist"; then
-	        sed 's/^\(.*\) \(.*\)$/  {"\1", (__ptr_t) \&\2},/' < "$nlist" >> "$objdir/$dlsyms"
+	        sed 's/^\(.*\) \(.*\)$/  {"\1", (__ptr_t) \&\2},/' < "$nlist" >> "$output_objdir/$dlsyms"
 	      else
 		echo '/* NONE */' >> "$output_objdir/$dlsyms"
 	      fi
-
             done
-
-	    if test -f "$nlist"; then
-	      sed 's/^\(.*\) \(.*\)$/  {"\1", (__ptr_t) \&\2},/' < "$nlist" >> "$output_objdir/$dlsyms"
-	    fi
 
 	    $echo >> "$output_objdir/$dlsyms" "\
   {0, (__ptr_t) 0}
