--- a/libltdl/configure.in
+++ b/libltdl/configure.in
@@ -23,15 +23,21 @@ if test x"$libltdl_cv_dlpreopen" = x"yes"; then
   AC_DEFINE(HAVE_DLPREOPEN)
 fi
 
+supported=yes
 LIBADD_DL=
 AC_CHECK_FUNCS(dlopen, AC_DEFINE(HAVE_LIBDL),
 [AC_CHECK_LIB(dl, dlopen, [AC_DEFINE(HAVE_LIBDL) LIBADD_DL="-ldl"],
  [AC_CHECK_LIB(dld, dld_link, [AC_DEFINE(HAVE_DLD) LIBADD_DL="-ldld"],
-   [AC_CHECK_FUNCS(shl_load, AC_DEFINE(HAVE_SHL_LOAD) )]
+   [AC_CHECK_FUNCS(shl_load, AC_DEFINE(HAVE_SHL_LOAD), supported=no )]
   )]
  )]
 )
 AC_SUBST(LIBADD_DL)
+
+if test "$supported" = no; then
+  AC_MSG_WARN(Can't find dlopen support: Please make sure that your programs use -dlopen/-dlpreopen.)
+  AC_DEFINE(DEBUG)
+fi
 
 AM_SYS_SYMBOL_UNDERSCORE
 if test x"$USE_SYMBOL_UNDERSCORE" = xyes; then
@@ -53,7 +59,7 @@ main() { void *self, *ptr1, *ptr2; self=dlopen(NULL,RTLD_LAZY);
 fi
 
 if test x"$libltdl_cv_need_uscore" = xyes; then
-   AC_DEFINE(NEED_USCORE)
+  AC_DEFINE(NEED_USCORE)
 fi
 
 dnl Output the makefile
