--- a/ltmain.in
+++ b/ltmain.in
@@ -559,7 +559,18 @@ compiler."
     modename="$modename: link"
     C_compiler="$CC" # save it, to compile generated C sources
     CC="$nonopt"
-    allow_undefined=yes
+    case "$host" in
+    *-*-cygwin32* | *-*-mingw32* | *-*-os2*)
+      # It is impossible to link a dll without this setting, and
+      # we shouldn't force the makefile maintainer to figure out
+      # which system we are compiling for in order to pass an extra
+      # flag for every libtool invokation.
+      allow_undefined=no
+      ;;
+    *)
+      allow_undefined=yes
+      ;;
+    esac
     compile_command="$CC"
     finalize_command="$CC"
 
@@ -951,6 +962,11 @@ compiler."
 	  immediate | unsupported)
 	    if test "$hardcode_direct" = no; then
 	      compile_command="$compile_command $dir/$linklib"
+	      case "$host" in
+	      *-*-cygwin32* | *-*-mingw32* | *-*-os2*)
+		compile_dependencylibs="$compile_dependencylibs -L$dir -l$name"
+		;;
+	      esac
 	    elif test "$hardcode_minus_L" = no; then
 	      case "$host" in
 	      *-*-sunos*)
@@ -1157,11 +1173,14 @@ compiler."
 	exit 1
       fi
 
+      # If the following section is uncommented, then it is impossible to
+      # link with ltlibrary deplibs...
+      
       # How the heck are we supposed to write a wrapper for a shared library?
-      if test -n "$link_against_libtool_libs"; then
-	$echo "$modename: error: cannot link shared libraries into libtool libraries" 1>&2
-	exit 1
-      fi
+      #if test -n "$link_against_libtool_libs"; then
+      #	 $echo "$modename: error: cannot link shared libraries into libtool libraries" 1>&2
+      #	 exit 1
+      #fi
 
       if test -n "$dlfiles$dlprefiles"; then
 	$echo "$modename: warning: \`-dlopen' is ignored for libtool libraries" 1>&2
@@ -1328,9 +1347,16 @@ compiler."
 	  allow_undefined_flag="$no_undefined_flag"
 	fi
 
-	# Add libc to deplibs on all systems.
 	dependency_libs="$deplibs"
-	deplibs="$deplibs -lc"
+	case "$host" in
+	*-*-cygwin32* | *-*-mingw32* | *-*-os2*)
+	  # these systems don't actually have a c library (as such)!
+	  ;;
+	*)
+	  # Add libc to deplibs on all other systems.
+	  deplibs="$deplibs -lc"
+	  ;;
+	esac
       fi
 
       # Create the output directory, or remove our outputs if we need to.
@@ -1359,7 +1385,7 @@ compiler."
 	## Gordon: Do you check for the existence of the libraries in deplibs
 	## on the system?  That should maybe be merged in here someplace....
 	## Actually: I think test_compile and file_magic do this... file_regex
-	## sorta does this. Only pas_all needs to be changed.  -Toshio
+	## sorta does this. Only pass_all needs to be changed.  -Toshio
 	name_save=$name
 	libname_save=$libname
 	release_save=$release
@@ -1472,7 +1498,7 @@ EOF
 		   # strict.  What do you think Gordon?
 		    potential_libs=`ls $i/$libname[.-]* 2>/dev/null`
 		    for potent_lib in $potential_libs; do
-		      file_output=`file $potent_lib`
+		      file_output=`eval $file_magic_command $potent_lib`
 		      if test `expr "$file_output" : ".*$file_magic_regex"` -ne 0 ; then
 			newdeplibs="$newdeplibs $a_deplib"
 			a_deplib=""
