* libltdl/Makefile.am: install libltdl conditionally... 	* libltdl/configure.in: ... if --enable-ltdl-install is issued 	* libltdl/ltdl.c: removed #ifdef DEBUG 	* mdemo/Makefile.am (mdemo_debug_LDADD, mdemo_debug_DEPENDENCIES): 	use libltdl.la

--- a/libltdl/configure.in
+++ b/libltdl/configure.in
@@ -11,6 +11,10 @@ AC_CHECK_HEADERS(malloc.h memory.h stdlib.h unistd.h stdio.h ctype.h dlfcn.h dl.
 AC_CHECK_HEADERS(string.h strings.h, break)
 AC_CHECK_FUNCS(strdup strrchr rindex)
 
+AC_ARG_ENABLE(ltdl-install,
+  [--enable-ltdl-install    install libltdl (breaks check before install)])
+AM_CONDITIONAL(INSTALL_LTDL, test x$enable_ltdl_install = xyes)
+
 AC_CACHE_CHECK([whether libtool supports -dlopen/-dlpreopen],
 	libltdl_cv_dlpreopen, [dnl
   if grep '^global_symbol_pipe=..*$' ./libtool >/dev/null; then
