* libltdl/Makefile.am: install libltdl conditionally... 	* libltdl/configure.in: ... if --enable-ltdl-install is issued 	* libltdl/ltdl.c: removed #ifdef DEBUG 	* mdemo/Makefile.am (mdemo_debug_LDADD, mdemo_debug_DEPENDENCIES): 	use libltdl.la

--- a/libltdl/Makefile.am
+++ b/libltdl/Makefile.am
@@ -5,19 +5,23 @@
 # level Makefile.
 AUTOMAKE_OPTIONS = no-dependencies foreign
 
-ltdls.lo: ltdl.c
-	$(LTCOMPILE) -DDEBUG -o $@ -c $<
+LTDL_VERSION = -version-info 0:1:1
 
-lib_LTLIBRARIES = libltdl.la libltdls.la
-
-libltdl_la_SOURCES = ltdl.c ltdl.h
-libltdl_la_LDFLAGS = $(LIBADD_DL) 
-
-libltdls_la_LIBADD = ltdls.lo
-libltdls_la_SOURCES = ltdl.h
-libltdls_la_LDFLAGS = $(LIBADD_DL) 
-
+if INSTALL_LTDL
+LTDL_FLAGS = $(LTDL_VERSION) -rpath $(libdir) 
 include_HEADERS = ltdl.h
+else
+LTDL_FLAGS =
+noinst_HEADERS = ltdl.h
+endif
+
+EXTRA_LTLIBRARIES = libltdl.la
+
+lib_LTLIBRARIES = @LIBLIBS@
+noinst_LTLIBRARIES = @NOINSTLIBS@
+
+libltdl_la_SOURCES = ltdl.c
+libltdl_la_LDFLAGS = $(LTDL_FLAGS) $(LIBADD_DL)
 
 # rebuild the libtool script if needed
 ltdl.lo: libtool
